--- a/site/settings/theming.yaml
+++ b/site/settings/theming.yaml
@@ -1,6 +1,4 @@
 theme: fitz
-smartypants: false
-allow_php: false
 default_layout: default
 default_page_template: default
 default_entry_template: post
@@ -11,3 +9,5 @@ default_page_fieldset: page
 default_entry_fieldset: entry
 default_term_fieldset: term
 default_asset_fieldset: asset
+smartypants: false
+allow_php: true
