--- a/site/settings/routes.yaml
+++ b/site/settings/routes.yaml
@@ -1,7 +1,8 @@
 collections:
-  blog: '/blog/{year}/{month}/{day}/{slug}'
+  blog: '/blog/{slug}'
   things: '/projects/{slug}'
   events: '/events/{slug}'
+  projects: '/projects/{slug}'
 taxonomies:
   tags: '/blog/tags/{slug}'
   categories: '/blog/categories/{slug}'
