--- a/site/settings/theming.yaml
+++ b/site/settings/theming.yaml
@@ -4,7 +4,7 @@ default_page_template: default
 default_entry_template: post
 default_taxonomy_template: taxonomy
 error_template_folder: errors
-default_fieldset: default
+default_fieldset: post
 default_page_fieldset: page
 default_entry_fieldset: entry
 default_term_fieldset: term
