--- a/site/users/fitz.yaml
+++ b/site/users/fitz.yaml
@@ -1,4 +1,9 @@
+---
 email: colin@fitz-maurice.com
+first_name: Colin
+last_name: Fitz-Maurice
 password_hash: $2y$10$fbyaOcVfHGtSqOuojR2yh.DsjlJ1tnIMbnuxLQ1Gak7V3X9K7hNmi
 id: ca45dc08-ac39-486f-8b76-db275a33fb50
 super: true
+---
+Hello. I'm Colin Fitz-Maurice, a <a href="https://laravel.com/" target="_blank">Laravel</a> Developer with a Frontend Focus, working for <a href="#" data-toggle="tooltip" title="Some tooltip text!">@Goodworld</a> and living in Philadelphia.
