--- a/site/settings/theming.yaml
+++ b/site/settings/theming.yaml
@@ -9,5 +9,5 @@ default_page_fieldset: page
 default_entry_fieldset: entry
 default_term_fieldset: term
 default_asset_fieldset: asset
-smartypants: false
+smartypants: true
 allow_php: true
