--- a/site/storage/assets/main/img/folder.yaml
+++ b/site/storage/assets/main/img/folder.yaml
@@ -30,3 +30,7 @@ assets:
     file: roosevelt-elk.jpg
   f6246fff-6535-454b-b9ea-9b1b01d8577e:
     file: stetson.jpg
+  af9bd2de-6bef-44ad-a608-14ab2110a961:
+    title: Colin Fitz-Maurice
+    alt: Colin Fitz-Maurice
+    file: Colin-Fitz-Maurice.jpg
