--- a/site/settings/fieldsets/job.yaml
+++ b/site/settings/fieldsets/job.yaml
@@ -1,12 +1,6 @@
 title: Jobs
 create_title: New Job Post
 fields:
-  company:
-    type: text
-    display: Company
-    instructions: Name of the company
-    width: 50
-    validate: required
   position:
     type: text
     display: Position
@@ -19,6 +13,11 @@ fields:
     instructions: Website of the company
     width: 50
     validate: required
+  project_link:
+    type: text
+    display: Project Link
+    instructions: Link to the project on this website
+    width: 50
   start_date:
     type: date
     display: Start Date
@@ -37,10 +36,10 @@ fields:
     earliest_date: January 1, 1900
     width: 25
     validate: date
-  duties:
+  description:
     type: markdown
-    display: Duties
-    instructions: What did you do while employeed?
+    display: Description
+    instructions: What I did while employeed
     cheatsheet: true
     container: main
     folder: jobs
