--- a/.htaccess
+++ b/.htaccess
@@ -1,35 +1,63 @@
-# compress text, html, javascript, css, xml and svg:
-AddOutputFilterByType DEFLATE text/plain
-AddOutputFilterByType DEFLATE text/html
-AddOutputFilterByType DEFLATE text/xml
-AddOutputFilterByType DEFLATE text/css
-AddOutputFilterByType DEFLATE application/xml
-AddOutputFilterByType DEFLATE application/xhtml+xml
-AddOutputFilterByType DEFLATE application/rss+xml
-AddOutputFilterByType DEFLATE application/javascript
-AddOutputFilterByType DEFLATE application/x-javascript
-AddType image/svg+xml .svg
-AddOutputFilterByType DEFLATE image/svg+xml
+# ------------------------------------------------------------------------------
+# COMMON PHP OVERRIDES
+#
+# Sometimes editing your php.ini file is impossible or even just annoying.
+# Here are some of the most common settings that can (sometimes) be overridden.
+# ------------------------------------------------------------------------------
 
-### disable etags
-Header unset ETag
-FileETag None
+# php_value memory_limit 256M
+# php_value post_max_size 16M
+# php_value max_execution_time 90
+# php_value max_input_time 120
+# php_value upload_max_filesize 16M
 
-### activate mod_expires
-ExpiresActive On
-ExpiresDefault "access plus 9 years"
-ExpiresByType text/html "access plus 1 day"
+# ------------------------------------------------------------------------------
+# BASE APACHE RULES
+#
+# When running in a subdirectory, you should uncomment and adjust the
+# RewriteBase rule to point to your directory, eg. RewriteBase /directory/
+# ------------------------------------------------------------------------------
 
-###<FilesMatch ".(ico|jpg|jpeg|png|gif|svg|js|css|swf)$">
-###Header set Expires "access plus 1 years"
-###</FilesMatch>
+Options -MultiViews
+RewriteEngine On
+# RewriteBase /
 
-## hide .pdf extension
-# To externally redirect /dir/file.pdf to /dir/file
-RewriteCond %{THE_REQUEST} \s/+(.+?)\.pdf[\s?] [NC]
-RewriteRule ^ /%1 [R=302,L,NE]
 
-# To internally forward /dir/file to /dir/file.pdf
+# ------------------------------------------------------------------------------
+# REMOVE TRAILING SLASHES
+# ------------------------------------------------------------------------------
+
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{DOCUMENT_ROOT}/$1\.pdf -f [NC]
-RewriteRule ^(.+?)/?$ /$1.pdf [L]
+RewriteRule ^(.*)/$ /$1 [L,R=301]
+
+
+# ------------------------------------------------------------------------------
+# STATIC CACHING PROXY
+#
+# Enable these rules when using static html caching
+# to bypass Statamic when a given URL has a cached copy.
+# ------------------------------------------------------------------------------
+
+# RewriteCond %{REQUEST_FILENAME}   !-f
+# RewriteCond %{REQUEST_METHOD} GET
+# RewriteRule ^(.*) static/$1/index.html
+
+
+# ------------------------------------------------------------------------------
+# PROTECT SYSTEM DIRECTORIES
+#
+# Not necessary when running above webroot.
+# ------------------------------------------------------------------------------
+
+RewriteRule ^site/(?!themes) - [F,L]
+RewriteRule ^local - [F,L]
+RewriteRule ^statamic - [F,L]
+
+
+# ------------------------------------------------------------------------------
+# ROUTE THROUGH INDEX.PHP
+# ------------------------------------------------------------------------------
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [L]
