--- a/site/storage/assets/main/projects/folder.yaml
+++ b/site/storage/assets/main/projects/folder.yaml
@@ -25,3 +25,45 @@ assets:
     title: LifeZette Homepage
     alt: lifezette_homepage
     file: lifezette_1.png
+  1e4bf90b-a107-4499-bc0c-055f157258b2:
+    file: jco_1.png
+  060abfb4-d3e6-49ca-b0a1-591324329e4e:
+    file: jco_2.png
+  34989ace-c063-4e43-ac3f-2de6f7171b90:
+    file: jco_3.png
+  442159fb-938e-4047-8402-86aaac5c3132:
+    file: jco_4.png
+  62b41a85-a55c-4ce5-8e61-df673a1f535a:
+    file: jco_5.png
+  8294a04a-f7e3-49c4-997d-4b76c4f91b14:
+    file: jco_6.png
+  27378a05-628c-428c-84ed-888602b0a173:
+    title: Jericho Oil Corporation
+    alt: Jericho Oil Corporation
+    file: jericho_oil_corporation.png
+  af72c990-dbc2-4668-9854-0c2b7859617e:
+    file: lifezette_2-1476672326.png
+  6803f74e-cd00-4e78-a42e-8d414edf287a:
+    file: lifezette_3-1476672328.png
+  bf22db3f-9812-4c41-8773-87906fe0a02e:
+    file: lifezette_4-1476672330.png
+  41abc172-8792-49f8-8cd6-648ac6ac4390:
+    file: lifezette_5-1476672334.png
+  432084cf-b41c-4f09-83b2-57c434abb171:
+    file: lifezette_6-1476672335.png
+  81b587b1-ef2e-4ee5-b310-8d776ac56e32:
+    file: lifezette.png
+  06affdf3-36f3-4b07-b74d-30696366deea:
+    file: lifezette_desktop_2.png
+  c8d706e8-c095-465d-a7f8-26c267415f84:
+    file: lifezette_desktop_3.png
+  3b692868-1333-466f-92d6-ab12aea1c3d4:
+    file: lifezette_desktop_4.png
+  d27edb77-630e-4a60-935d-f6a50949b8c1:
+    file: lifezette_desktop_5.png
+  0ca982fd-b59d-414f-8dc7-8100e36a28ab:
+    file: lifezette_desktop_6.png
+  740b205f-6185-4353-856a-15df43a9f4f2:
+    file: lifezette_desktop_1.png
+  209e60be-a372-4637-8f07-d284d583661f:
+    file: LifeZette Desktop Homepage.png
