Salt House Road

--- a/site/storage/assets/main/projects/folder.yaml
+++ b/site/storage/assets/main/projects/folder.yaml
@@ -67,3 +67,21 @@ assets:
     file: lifezette_desktop_1.png
   209e60be-a372-4637-8f07-d284d583661f:
     file: LifeZette Desktop Homepage.png
+  18d26e2f-4d4f-4bf6-9c51-8ce14a6448af:
+    file: salt_house_road_1.png
+  2ea61628-4ab3-453f-93e2-45386b74197c:
+    file: salt_house_road_2.png
+  40d84fa2-ebff-4d3b-9f8a-f1ae034c09eb:
+    file: salt_house_road_3.png
+  789dc071-746a-4a5f-bcf8-b723f85ce500:
+    file: salt_house_road_4.png
+  6201cbaa-7e92-4519-8085-c540381bc511:
+    file: salt_house_road_5.png
+  6b0c9627-9844-4848-be7f-5c14dbc01940:
+    file: salt_house_road_6.png
+  0034b448-0fc1-4a86-80bf-ed491b3febef:
+    title: Salt House Road
+    alt: Salt House Road Homepage
+    file: Salt_House_Road.png
+  65b3b2ca-566f-4b5a-b9cf-c9d71c2b1b07:
+    file: LifeZette_Mobile_App.png
