--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ local/cache/*
 local/storage/*
 local/temp/*
 installer.php
+phpunit.xml
 
 # Theme NPM Modules
  site/themes/redwood/node_modules/
- site/themes/FITZ/node_modules/
+ site/themes/fitz/node_modules/
