--- a/site/storage/assets/main/projects/folder.yaml
+++ b/site/storage/assets/main/projects/folder.yaml
@@ -85,3 +85,11 @@ assets:
     file: Salt_House_Road.png
   65b3b2ca-566f-4b5a-b9cf-c9d71c2b1b07:
     file: LifeZette_Mobile_App.png
+  8751464f-b1f0-4191-95fd-b35eccc62874:
+    file: gwipel_1.png
+  9d62a54c-9609-4857-a2a2-4ffc28ba001b:
+    file: gwipel_2.png
+  48a2e0ad-c7b6-4a5d-9a47-140dae635bab:
+    file: gwipel_3.png
+  b094c050-ccfe-40a5-9fc9-e65e6a800392:
+    file: GWIPEL.png
