--- a/statamic/settings/fieldsets/search.yaml
+++ b/statamic/settings/fieldsets/search.yaml
@@ -8,6 +8,9 @@ fields:
     width: 50
   algolia_app_id:
     width: 50
+  algolia_searchable_attributes:
+    type: list
+    width: 100
   auto_index:
      type: toggle
   default_index:
