--- a/statamic/composer.json
+++ b/statamic/composer.json
@@ -16,12 +16,12 @@
         "league/glide-laravel": "^1.0.0",
         "mustangostang/spyc": "dev-master#dfd9aadc1f5224065d55b42b712c7e99a50a3f4d",
         "laravelcollective/html": "~5.0",
-        "michelf/php-markdown": "1.5.0",
+        "michelf/php-markdown": "1.6.0",
         "michelf/php-smartypants": "dev-lib#c0465c6d4c5ab853c2fa45df6c10bce7e35cc137",
         "netcarver/textile": "3.6.*@dev",
         "webpatser/laravel-uuid": "1.*",
         "barryvdh/laravel-debugbar": "^2.2",
-        "mmanos/laravel-search": "dev-master#92bc9ae4e05de219c08a72ea37de21931245ba62",
+        "mmanos/laravel-search": "dev-master",
         "zendframework/zendsearch": "dev-master",
         "algolia/algoliasearch-client-php": "^1.6",
         "league/csv": "^8.0",
@@ -66,6 +66,10 @@
             "options": {
                 "symlink": false
             }
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/statamic/laravel-search"
         }
     ]
 }
