--- a/site/storage/assets/main/img/folder.yaml
+++ b/site/storage/assets/main/img/folder.yaml
@@ -34,3 +34,5 @@ assets:
     title: Colin Fitz-Maurice
     alt: Colin Fitz-Maurice
     file: Colin-Fitz-Maurice.jpg
+  48fa4afc-806c-40ea-916d-99edd8a0aef7:
+    file: FITZ_email.png
