--- a/site/settings/assets.yaml
+++ b/site/settings/assets.yaml
@@ -1,6 +1,6 @@
 image_manipulation_route: /img
-image_manipulation_secure: true
+image_manipulation_secure: false
 auto_crop: true
 image_manipulation_driver: gd
-image_manipulation_cached: true
+image_manipulation_cached: false
 image_manipulation_cached_path: img
