--- a/site/settings/caching.yaml
+++ b/site/settings/caching.yaml
@@ -1,5 +1,5 @@
-stache_always_update: true
-static_caching_enabled: true
+stache_always_update: false
+static_caching_enabled: false
 static_caching_length: "604800"
 static_caching_type: cache
 static_caching_file_path: static
