--- a/site/storage/assets/main/projects/folder.yaml
+++ b/site/storage/assets/main/projects/folder.yaml
@@ -93,3 +93,51 @@ assets:
     file: gwipel_3.png
   b094c050-ccfe-40a5-9fc9-e65e6a800392:
     file: GWIPEL.png
+  dfe92250-a244-411c-b1ba-f26436bd23f9:
+    file: Goodworld-7.png
+  d3d08c5e-6439-40fb-b77b-b73ae5de42aa:
+    file: Goodworld-8.png
+  7edc1e3e-c276-424a-86c9-3856f29c1488:
+    file: Goodworld-9.png
+  19ba343c-e367-4e71-8131-3fd6b2ee3716:
+    file: Goodworld-10.png
+  c5b03986-36e9-4dff-bc88-4e81320cf8ab:
+    file: Goodworld-11.png
+  20e437a1-4db4-4fa1-ae83-d52f1409e788:
+    file: Goodworld-widget-1.png
+  c121eae5-3982-40de-b3ae-e96d8eb58eae:
+    file: Goodworld-widget-2.png
+  6efd4e09-4172-4e28-8196-eeb933da5e12:
+    file: Goodworld-widget-3.png
+  87cc468b-7a54-4cb2-9016-1fb2d97f727c:
+    file: Goodworld-3.png
+  6d95b24d-3636-43b5-9f28-beafe54248c3:
+    file: goodworld-banner.jpg
+  22f89c1b-2b6d-431f-882c-57667c82523c:
+    file: widget-1.jpg
+  bc6df12f-55ad-4dcb-bc0d-c5da836474fb:
+    file: widget-2.jpg
+  fd81c1d5-33a0-4c15-afab-7ec06534cea9:
+    file: widget-3.jpg
+  5d70bbca-3cef-4bb4-a7e6-2b00e4e376cc:
+    file: Goodworld-1.jpg
+  7c22a80d-4501-4467-8216-3ea5c329cf3f:
+    file: Goodworld-2.jpg
+  0adeec9b-f40c-4992-bb6f-dfe19c443f95:
+    file: Goodworld-3.jpg
+  f2148904-ea01-4d4b-9b9c-014ce0661323:
+    file: Goodworld-4.jpg
+  0e54a30a-1326-43e4-a177-0c2e22a77e7e:
+    file: Goodworld-5.jpg
+  a2258714-1ade-4b37-9f2c-f4a19c8f90c5:
+    file: Goodworld-7.jpg
+  181446cd-3908-440c-ab47-31f17613a3e7:
+    file: Goodworld-8.jpg
+  8bc9de63-b46c-4ad5-aeab-764906cce433:
+    file: Goodworld-9.jpg
+  c9f0f367-f171-4738-844c-f920e60201be:
+    file: Goodworld-10.jpg
+  50ce7581-9bbd-422a-a86c-ecc63234311c:
+    file: Goodworld-11.jpg
+  16562cf1-a70f-454f-a04d-d597ab150f4d:
+    file: Goodworld-12.jpg
