--- a/site/settings/formsets/contact.yaml
+++ b/site/settings/formsets/contact.yaml
@@ -13,21 +13,26 @@ fields:
   message:
     display: Message
     validate: required|min:15
+  color:
+    type: colorpicker
+    display: Color
 columns:
   - name
   - email
   - subject
+  - message
+  - color
 metrics:
-  -
+  - 
     type: total
     label: Total
 email:
-  -
+  - 
     to: colin@fitz-maurice.com
-    subject: FITZ | Contact Form
+    subject: Contact Form
     automagic: true
     reply_to: '{{ email }}'
-  -
+  - 
     to: '{{ email }}'
-    subject: 'Thanks for reaching out'
+    subject: Thanks for reaching out
     template: thank-you
