--- a/statamic/bundles/Bard/meta.yaml
+++ b/statamic/bundles/Bard/meta.yaml
@@ -1,4 +1,24 @@
 fieldtype_fields:
+  spellcheck:
+    type: toggle
+    default: true
+  allow_source:
+    type: toggle
+    default: true
+  autoLink:
+    type: toggle
+    default: false
+  target_blank:
+    type: toggle
+    default: false
+  link_validation:
+    type: toggle
+    default: false
+  paste:
+    type: yaml
+    default: |
+      forcePlainText: true
+      cleanPastedHTML: false
   sets:
     type: replicator_sets
   container:
