--- a/statamic/bundles/Date/meta.yaml
+++ b/statamic/bundles/Date/meta.yaml
@@ -4,6 +4,9 @@ fieldtype_fields:
   allow_time:
     type: toggle
     default: true
+  require_time:
+    type: toggle
+    default: false
   earliest_date:
     type: text
     default: January 1, 1900
