Remove some build files

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "on-build-webpack": "^0.1.0",
         "webpack-watch": "^0.2.0",
         "yargs": "^4.6.0"
+    },
+    "dependencies": {
+        "laravel-mix-purgecss": "^3.0.0",
+        "laravel-mix-tailwind": "^0.1.0"
     }
 }
