--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     },
     "dependencies": {
         "laravel-mix-purgecss": "^4.0.0",
-        "laravel-mix-tailwind": "^0.1.0",
-        "vue": "^2.5.21"
+        "laravel-mix-tailwind": "^0.1.0"
     }
 }
