--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "private": true,
-  "scripts": {
-    "local": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --env=local --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "staging": "cross-env NODE_ENV=staging node_modules/webpack/bin/webpack.js --progress --hide-modules --env=staging --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --env=production --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "dev": "npm run local",
-    "prod": "npm run production",
-    "watch": "npm run local -- --watch"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.23.6",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "cross-env": "5.2.0",
-    "hasbin": "^1.2.3",
-    "highlight.js": "^9.12.0",
-    "laravel-mix": "4.0.13",
-    "node-cmd": "^3.0.0",
-    "on-build-webpack": "^0.1.0",
-    "sass": "^1.15.3",
-    "sass-loader": "7.*",
-    "sharer.js": "^0.3.3",
-    "tailwindcss": "^0.7.3",
-    "vue-template-compiler": "^2.5.21",
-    "webpack-watch": "^0.2.0",
-    "yargs": "12.0.5"
-  },
-  "dependencies": {
-    "laravel-mix-purgecss": "^4.0.0",
-    "laravel-mix-tailwind": "^0.1.0"
-  }
+    "private": true,
+    "scripts": {
+        "local": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --env=local --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "staging": "cross-env NODE_ENV=staging node_modules/webpack/bin/webpack.js --progress --hide-modules --env=staging --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --env=production --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "dev": "npm run local",
+        "prod": "npm run production",
+        "watch": "npm run local -- --watch"
+    },
+    "devDependencies": {
+        "browser-sync": "^2.23.6",
+        "browser-sync-webpack-plugin": "^2.0.1",
+        "cross-env": "5.2.0",
+        "hasbin": "^1.2.3",
+        "highlight.js": "^9.14.2",
+        "laravel-mix": "4.0.14",
+        "node-cmd": "^3.0.0",
+        "on-build-webpack": "^0.1.0",
+        "sass": "1.17.0",
+        "sass-loader": "7.*",
+        "sharer.js": "^0.3.3",
+        "tailwindcss": "^0.7.4",
+        "vue-template-compiler": "^2.6.6",
+        "webpack-watch": "^0.2.0",
+        "yargs": "13.1.0"
+    },
+    "dependencies": {
+        "laravel-mix-purgecss": "^4.1.0",
+        "laravel-mix-tailwind": "^0.1.0"
+    }
 }
