--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "5.2.0",
         "hasbin": "^1.2.3",
-        "highlight.js": "^9.15.8",
+        "highlight.js": "^9.15.10",
         "laravel-mix": "4.1.*",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.21.0",
-        "sass-loader": "7.*",
+        "sass": "^1.22.10",
+        "sass-loader": "^7.3.1",
         "sharer.js": "^0.3.8",
-        "tailwindcss": "^1.0.5",
+        "tailwindcss": "^1.1.2",
         "vue-template-compiler": "^2.6.10",
         "webpack-watch": "^0.2.0",
         "yargs": "13.3.*"
