--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "devDependencies": {
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "5.2.0",
+        "cross-env": "6.0.3",
         "hasbin": "^1.2.3",
         "highlight.js": "^9.15.10",
-        "laravel-mix": "4.1.*",
+        "laravel-mix": "5.0.0",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.22.10",
-        "sass-loader": "^7.3.1",
+        "sass": "^1.23.0",
+        "sass-loader": "8.0.0",
         "sharer.js": "^0.3.8",
         "tailwindcss": "^1.1.2",
         "vue-template-compiler": "^2.6.10",
         "webpack-watch": "^0.2.0",
-        "yargs": "13.3.*"
+        "yargs": "14.2.*"
     },
     "dependencies": {
-        "laravel-mix-purgecss": "^4.1.0",
+        "laravel-mix-purgecss": "^4.2.0",
         "laravel-mix-tailwind": "^0.1.0"
     }
 }
