--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "6.0.3",
-        "fsevents": "^2.1.1",
+        "fsevents": "^2.1.2",
         "hasbin": "^1.2.3",
         "highlight.js": "^9.16.2",
         "laravel-mix": "5.0.0",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.23.3",
+        "sass": "^1.23.7",
         "sass-loader": "8.0.0",
-        "sharer.js": "^0.3.8",
-        "tailwindcss": "^1.1.3",
+        "sharer.js": "^0.4.0",
+        "tailwindcss": "^1.1.4",
         "vue-template-compiler": "^2.6.10",
         "webpack-watch": "^0.2.0",
-        "yargs": "14.2.*"
+        "yargs": "15.0.2"
     },
     "dependencies": {
         "laravel-mix-purgecss": "^4.2.0",
