remove fsevents package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "6.0.3",
-        "fsevents": "^2.1.2",
         "hasbin": "^1.2.3",
         "highlight.js": "^9.16.2",
         "laravel-mix": "5.0.0",
@@ -21,6 +20,7 @@
         "on-build-webpack": "^0.1.0",
         "sass": "^1.23.7",
         "sass-loader": "8.0.0",
+        "serialize-javascript": "^2.1.2",
         "sharer.js": "^0.4.0",
         "tailwindcss": "^1.1.4",
         "vue-template-compiler": "^2.6.10",
