--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "6.0.3",
+        "extra-watch-webpack-plugin": "^1.0.3",
         "hasbin": "^1.2.3",
-        "highlight.js": "^9.16.2",
-        "laravel-mix": "5.0.0",
+        "highlight.js": "^9.17.1",
+        "laravel-mix": "^5.0.1",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.23.7",
-        "sass-loader": "8.0.0",
+        "sass": "^1.24.4",
+        "sass-loader": "^8.0.2",
         "serialize-javascript": "^2.1.2",
         "sharer.js": "^0.4.0",
         "tailwindcss": "^1.1.4",
-        "vue-template-compiler": "^2.6.10",
+        "vue-template-compiler": "^2.6.11",
         "webpack-watch": "^0.2.0",
-        "yargs": "15.0.2"
+        "yargs": "15.1.*"
     },
     "dependencies": {
         "laravel-mix-purgecss": "^4.2.0",
