--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "on-build-webpack": "^0.1.0",
         "sass": "^1.26.3",
         "sass-loader": "^8.0.2",
-        "serialize-javascript": "^2.1.2",
+        "serialize-javascript": "3.0.*",
         "sharer.js": "^0.4.0",
         "tailwindcss": "^1.2.0",
         "vue-template-compiler": "^2.6.11",
         "webpack-watch": "^0.2.0",
-        "yargs": "15.1.*"
+        "yargs": "15.3.*"
     },
     "dependencies": {
         "laravel-mix-purgecss": "^4.2.0",
