--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     },
     "devDependencies": {
         "braces": "^3.0.2",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.26.10",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "6.0.3",
+        "cross-env": "7.0.2",
         "extra-watch-webpack-plugin": "^1.0.3",
         "hasbin": "^1.2.3",
-        "highlight.js": "^9.18.1",
+        "highlight.js": "^10.1.1",
         "laravel-mix": "^5.0.4",
+        "laravel-mix-jigsaw": "^1.2.0",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.26.3",
-        "sass-loader": "^8.0.2",
-        "serialize-javascript": "3.0.*",
+        "sass": "^1.26.10",
+        "sass-loader": "^9.0.2",
+        "serialize-javascript": "4.0.*",
         "sharer.js": "^0.4.0",
-        "tailwindcss": "^1.2.0",
+        "tailwindcss": "^1.5.1",
         "vue-template-compiler": "^2.6.11",
         "webpack-watch": "^0.2.0",
-        "yargs": "15.3.*"
+        "yargs": "15.4.*"
     },
     "dependencies": {
-        "laravel-mix-purgecss": "^4.2.0",
         "laravel-mix-tailwind": "^0.1.0"
     }
 }
