--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     },
     "devDependencies": {
         "braces": "^3.0.2",
-        "browser-sync": "^2.26.12",
+        "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "7.0.2",
         "extra-watch-webpack-plugin": "^1.0.3",
         "hasbin": "^1.2.3",
-        "highlight.js": "^10.2.0",
-        "laravel-mix": "^5.0.5",
-        "laravel-mix-jigsaw": "^1.3.0",
+        "highlight.js": "^10.3.2",
+        "laravel-mix": "^5.0.7",
+        "laravel-mix-jigsaw": "^1.4.0",
         "node-cmd": "^3.0.0",
         "on-build-webpack": "^0.1.0",
-        "sass": "^1.26.11",
-        "sass-loader": "^10.0.2",
+        "sass": "^1.28.0",
+        "sass-loader": "^10.0.5",
         "serialize-javascript": "5.0.*",
-        "sharer.js": "^0.4.0",
-        "tailwindcss": "^1.8.10",
+        "sharer.js": "^0.4.1",
+        "tailwindcss": "^1.9.6",
         "vue-template-compiler": "^2.6.12",
         "webpack-watch": "^0.2.0",
-        "yargs": "16.0.*"
+        "yargs": "^16.0.3"
     },
     "dependencies": {
-        "laravel-mix-tailwind": "^0.1.0"
+        "laravel-mix-tailwind": "^0.1.1"
     }
 }
