--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
     "private": true,
     "scripts": {
-        "local": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --env=local --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "staging": "cross-env NODE_ENV=staging node_modules/webpack/bin/webpack.js --progress --hide-modules --env=staging --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --env=production --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "dev": "npm run local",
-        "prod": "npm run production",
-        "watch": "npm run local -- --watch"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.4.0",
         "braces": "^3.0.2",
         "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "7.0.2",
+        "cross-env": "^7.0.3",
         "extra-watch-webpack-plugin": "^1.0.3",
         "hasbin": "^1.2.3",
         "highlight.js": "^10.4.1",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^6.0.5",
         "laravel-mix-jigsaw": "^1.4.0",
-        "node-cmd": "^3.0.0",
+        "node-cmd": "^4.0.0",
         "on-build-webpack": "^0.1.0",
         "sass": "^1.28.0",
-        "sass-loader": "^10.0.5",
+        "sass-loader": "^11.0.1",
         "serialize-javascript": "5.0.*",
         "sharer.js": "^0.4.1",
-        "tailwindcss": "^1.9.6",
+        "tailwindcss": "^2.0.4",
+        "tailwindcss-children": "^2.1.0",
         "vue-template-compiler": "^2.6.12",
-        "webpack-watch": "^0.2.0",
+        "webpack-watch": "^0.1.1",
         "yargs": "^16.0.3"
-    },
-    "dependencies": {
-        "laravel-mix-tailwind": "^0.1.1"
     }
 }
