--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
         "cross-env": "^7.0.3",
         "extra-watch-webpack-plugin": "^1.0.3",
         "hasbin": "^1.2.3",
-        "highlight.js": "^10.4.1",
+        "highlight.js": "^11.1.0",
         "laravel-mix": "^6.0.5",
         "laravel-mix-jigsaw": "^1.4.0",
         "node-cmd": "^4.0.0",
         "on-build-webpack": "^0.1.0",
         "sass": "^1.28.0",
-        "sass-loader": "^11.0.1",
-        "serialize-javascript": "5.0.*",
+        "sass-loader": "12.1",
+        "serialize-javascript": "^6.0.0",
         "sharer.js": "^0.4.1",
         "tailwindcss": "^2.0.4",
         "tailwindcss-children": "^2.1.0",
         "vue-template-compiler": "^2.6.12",
-        "webpack-watch": "^0.2.0",
-        "yargs": "^16.0.3"
+        "webpack-watch": "^0.1.1",
+        "yargs": "^17.0.1"
     }
 }
