--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.3.2",
-        "@tailwindcss/typography": "^0.4.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.8",
+        "autoprefixer": "^10.4.13",
         "braces": "^3.0.2",
         "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.0.1",
@@ -21,11 +22,12 @@
         "laravel-mix-jigsaw": "^2.0.0",
         "node-cmd": "^5.0.0",
         "on-build-webpack": "^0.1.0",
+        "postcss": "^8.4.19",
         "sass": "^1.28.0",
-        "sass-loader": "12.1",
+        "sass-loader": "^13.2.0",
         "serialize-javascript": "^6.0.0",
-        "sharer.js": "^0.4.1",
-        "tailwindcss": "^2.0.4",
+        "sharer.js": "^0.5.1",
+        "tailwindcss": "^3.2.4",
         "tailwindcss-children": "^2.1.0",
         "vue-template-compiler": "^2.6.12",
         "webpack-watch": "^0.2.0",
